Fixed mobile, print views for column stacking.

--- a/css/resume.css
+++ b/css/resume.css
@@ -53,10 +53,57 @@ ul {
 .project {
   padding-right: 15px;
 }
+
+@media (min-width: 768px) {
+    .contact-box {
+        float: right;
+    }
+}
+
 @media print {
-  .job, .project {
-    padding-right: 0px;
-  }
+    .job, .project {
+      padding-right: 0px;
+    }
+
+    .print-no-collapse {
+      float: left;
+    }
+    .print-no-collapse.col-md-12 {
+        width: 100%;
+    }
+    .print-no-collapse.col-md-11 {
+        width: 91.66666666666666%;
+    }
+    .print-no-collapse.col-md-10 {
+        width: 83.33333333333334%;
+    }
+    .print-no-collapse.col-md-9 {
+        width: 75%;
+    }
+    .print-no-collapse.col-md-8 {
+        width: 66.66666666666666%;
+    }
+    .print-no-collapse.col-md-7 {
+        width: 58.333333333333336%;
+    }
+    .print-no-collapse.col-md-6 {
+        width: 50%;
+    }
+    .print-no-collapse.col-md-5 {
+        width: 41.66666666666667%;
+    }
+    .print-no-collapse.col-md-4 {
+        width: 33.33333333333333%;
+    }
+    .print-no-collapse.col-md-3 {
+        width: 25%;
+    }
+    .print-no-collapse.col-md-2 {
+        width: 16.666666666666664%;
+    }
+    .print-no-collapse.col-md-1 {
+        width: 8.333333333333332%;
+    }
 }
 
 .job-description {
@@ -65,6 +112,10 @@ ul {
 
 .job-date {
     font-style: italic;
+}
+
+.job-date, .job-location {
+    text-align: right;
 }
 
 .languages {
