--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,11 @@
 :root {
+    --border-color: #ccc;
     --color: #333;
     --font-size: 0.875rem;
     --section-header-font-size: 1.125rem;
+    --job-pill-size: 2rem;
+    --job-pill-padding: 5px;
+
 }
 
 @media print {
@@ -33,8 +37,10 @@ a:hover {
     text-decoration: underline;
 }
 
-ul {
-    padding-left: 1.5rem;
+hr {
+    border: 0;
+    border-top: 1px solid var(--border-color);
+    margin: 10px 0;
 }
 
 li {
@@ -44,6 +50,12 @@ li {
 li::marker {
     font-size: smaller;
 }
+
+ul {
+    padding-left: 1.5rem;
+}
+
+/** Container **/
 
 .container {
     display: block;
@@ -79,6 +91,8 @@ li::marker {
 .header {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
     justify-content: space-between;
     padding: 10px 0;
 }
@@ -105,7 +119,7 @@ li::marker {
 /** Sections **/
 
 .section-header {
-    border-bottom: solid #eee 1px;
+    border-bottom: solid var(--border-color) 1px;
     display: flex;
     justify-content: space-between;
     padding: 5px 0;
@@ -127,12 +141,45 @@ li::marker {
 .job-header {
     margin: 10px 0 5px 0;
     display: flex;
-    align-items: baseline;
-    justify-content: space-between;
+    align-items: center;
+
+    --job-pill-background-color: #f9f9ff;
+    --job-pill-size: 2rem;
+    --job-pill-padding: 5px;
+}
+
+.job-bubble {
+    background-color: var(--job-pill-background-color);
+    border-radius: var(--job-pill-size);
+    border: solid var(--border-color) 1px;
+    font-weight: 500;
+    min-height: calc(var(--job-pill-size) + var(--job-pill-padding));
+    line-height: calc(var(--job-pill-size));
+    print-color-adjust: exact;
+    text-align: center;
+    min-width: calc(var(--job-pill-size) + var(--job-pill-padding));
+    z-index: 1;
+}
+
+.job-pill {
+    background-color: var(--job-pill-background-color);
+    border-bottom-right-radius: var(--job-pill-size);
+    border-left-style: none;
+    border-top-right-radius: var(--job-pill-size);
+    border: solid var(--border-color) 1px;
+    display: flex;
+    flex-direction: column;
+    height: calc(var(--job-pill-size) + var(--job-pill-padding));
+    margin-left: calc(-1 * var(--job-pill-size) / 2);
+    padding-left: calc(var(--job-pill-size) / 2 + var(--job-pill-padding));
+    padding-right: calc(var(--job-pill-size) / 2);
+    padding-top: 1px;
+    print-color-adjust: exact;
 }
 
 .job-description {
     font-weight: 500;
+    display: inline;
 }
 
 .job-description a {
@@ -142,6 +189,11 @@ li::marker {
 .job-technologies {
     font-size: smaller;
     color: #444;
+    display: inline;
+}
+
+.job-spacer {
+    flex: 1;
 }
 
 .job-date,
